# SGGX_TAA

./: .gitignore  CMakeLists.txt  README.md  SGGX_TAA.sln  rebuild
SGGX_TAA/: CMakeLists.txt  Notes.txt  SGGX_TAA.vcxproj  SGGX_TAA.vcxproj.filters  imgui.ini
SGGX_TAA/res/models/chestnut/: AL05a_flatted.mtl
SGGX_TAA/res/models/cube/: default.mtl
SGGX_TAA/res/models/cube2/: cube.mtl
SGGX_TAA/res/models/cube3/: cube.mtl
SGGX_TAA/res/models/esel_flat/: esel_flat.mtl
SGGX_TAA/res/models/esel_smooth/: esel_smooth.mtl
SGGX_TAA/res/models/sphere/: sphere.mtl
SGGX_TAA/res/models/wall/: wall.mtl
SGGX_TAA/res/shaders/: GGX.frag  GGX_error.frag  octree.frag  octree_bk.frag  octree_vis.frag  octree_vis.vert  phong.frag  ray_marching.frag  ray_marching.vert  ray_trace_bounding.frag  shader.vert  sphere_tracing.frag  taa_resolve.frag  voxels.frag
SGGX_TAA/src/: Application.cpp  GL_Utils.h  ImGuiUtils.h  Parameters.cpp  Parameters.h  Types.cpp  Types.h  Utils.cpp  Utils.h  file_utils.h
SGGX_TAA/src/Renderer/: Camera.cpp  Camera.h  CameraPath.cpp  CameraPath.h  Light.cpp  Light.h  Material.cpp  Material.h  RasterizationObject.cpp  RasterizationObject.h  RayMarchObject.cpp  RayMarchObject.h  Renderer.cpp  Renderer.h  SceneController.cpp  SceneController.h  SceneObject.cpp  SceneObject.h  TAABufferController.cpp  TAABufferController.h
SGGX_TAA/src/geometry/: OBJ_SGGX_Converter.cpp  OBJ_SGGX_Converter.h  Octree.cpp  Octree.h  SGGX_Distribution.cpp  SGGX_Distribution.h  Utils.cpp  Utils.h  VoxelGrid.cpp  VoxelGrid.h  mesh_object.h
SGGX_TAA/src/gl_wrappers/: ArrayBuffer.cpp  ArrayBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  TextureBuffer.cpp  TextureBuffer.h  VertexArray.cpp  VertexArray.h
SGGX_TAA/src/utils/: Exporter.cpp  Exporter.h  GL_Utils.h  ImGuiUtils.h  Loader.cpp  Loader.h  VideoExporter.cpp  VideoExporter.h  file_utils.h  tiny_obj_utils.cpp  tiny_obj_utils.h
